--- a/src/pages/role/role.less
+++ b/src/pages/role/role.less
@@ -2,4 +2,16 @@
   .userCreate {
     margin-right: 20px;
   }
+
+  .table {
+    user-select: none;
+  }
+}
+.addRoleModal-input {
+   display: inline-block;
+   width: 60%;
+}
+
+.auth_form {
+  user-select: none;
 }
