--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -1,7 +1,7 @@
 .login {
   width: 100%;
   height: 100%;
-  background-image: url("./img/bg.jpg");
+  background-image: url("../../assets/img/bg.jpg");
   background-size: 100% 100%;
   
   .login-header {
